# wealth-navigator-ai

./: .env  .env.development  .env.production  .gitignore  index.html  package-lock.json  tailwind.config.ts  vite.config.ts
backend/: .dockerignore  .env.example  DOCKER.md  Makefile  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_13_1112-ba4595389395_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py  advisor_agent.py  base_agent.py  cio_agent.py  communications_agent.py  compliance_agent.py  funding_agent.py  goal_agent.py  growth_agent.py  meeting_agent.py  memory.py  onboarding_agent.py  orchestrator.py  portfolio_agent.py  registry.py  report_agent.py  task_agent.py  tax_agent.py
backend/app/core/: database.py  exceptions.py  middleware.py  neo4j.py  security.py
backend/app/models/: __init__.py  base.py  campaign.py  chat.py  client.py  communication.py  compliance.py  corporate_action.py  funding.py  lead.py  order.py  portfolio.py  user.py
backend/app/nlp/: __init__.py  entity_extractor.py  intent_classifier.py  query_parser.py  sentiment_analyzer.py
backend/app/repositories/: base.py  client_repo.py
backend/app/schemas/: auth.py  campaign.py  chat.py  client.py  common.py  communication.py  compliance.py  corporate_action.py  funding.py  goal.py  lead.py  order.py  portfolio.py
backend/docs/: agents.md  deploy.md
backend/scripts/: migrate_data.py
backend/tests/: README.md  conftest.py
src/: App.tsx  (+2 more)
(+422 files in other folders)
